@@ -1,3 +1,0 @@
-package data.screens.mainMenu
-
-class MainMenuRepository
