@@ -1,0 +1,3 @@
+package domain.screens.dayPartMenu
+
+class DayPartMenuRepository
