@@ -1,0 +1,3 @@
+package domain.screens.mainMenu
+
+class MainMenuRepository
