@@ -2,8 +2,8 @@ package presentation.calendar
 
 import androidx.lifecycle.ViewModel
 import androidx.lifecycle.viewModelScope
-import data.calendar.CalendarRepository
-import data.calendar.CalendarState
+import domain.calendar.CalendarRepository
+import domain.calendar.CalendarState
 import kotlinx.coroutines.flow.MutableStateFlow
 import kotlinx.coroutines.flow.asStateFlow
 import kotlinx.coroutines.launch
