@@ -1,0 +1,11 @@
+package presentation.screens.tutorialHomeScreen
+
+import androidx.compose.runtime.Composable
+
+
+class HomeScreen /*: Screen //from voyager library*/ {
+    @Composable
+    override fun Content(){
+
+    }
+}
