@@ -1,0 +1,10 @@
+package presentation.screens.tutorialTaskScreen
+
+import androidx.compose.runtime.Composable
+
+class TaskScreen /*: Screen //from voyager library*/ {
+    @Composable
+    override fun Content(){
+
+    }
+}
