@@ -1,3 +1,6 @@
 https://www.youtube.com/watch?v=1TLk36FdmMA
 
 https://github.com/stevdza-san/ToDo-App-Compose-Multiplatform/tree/main/composeApp/src/commonMain/kotlin
+
+They use this navigation framework - https://voyager.adriel.cafe/
+Let's see if we can avoid that...
